feat: ci workflow template with github actions

--- a/.github/actions/go-lint/action.yaml
+++ b/.github/actions/go-lint/action.yaml
@@ -8,14 +8,17 @@ inputs:
     required: true
   artifact-name:
     required: true
+  config-path:
+    description: The path to the golangci-lint config yaml file
+    required: false
 outputs:
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/golint.sh ${{ inputs.path }} ${{ inputs.output }}
+    - run: ${{ github.action_path }}/golint.sh ${{ inputs.path }} ${{ inputs.output }} ${{ inputs.config-path }}
       shell: bash
     - name: upload lint results as artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ inputs.test-report-name }}
+        name: ${{ inputs.artifact-name }}
         path: ${{ inputs.output }}
