--- a/.github/actions/go-test/action.yaml
+++ b/.github/actions/go-test/action.yaml
@@ -4,9 +4,13 @@ inputs:
   # Path/s to execute test
   path:
     required: true
-  test-report-name:
+  test-report-artifact-name:
     required: true
-  test-coverage-name:
+  test-report-path:
+    required: true
+  coverage-report-artifact-name:
+    required: true
+  coverage-report-path:
     required: true
 outputs:
 runs:
@@ -14,15 +18,15 @@ runs:
   steps:
     - run: cd ${{ inputs.path }}
       shell: bash
-    - run: go test -coverprofile=coverage.out -json > report.json
+    - run: go test -coverprofile=${{ inputs.coverage-report-path }} -json -v ./... > ${{ inputs.test-report-path }}
       shell: bash
     - name: upload test results as artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ inputs.test-report-name }}
-        path: test.log
+        name: ${{ inputs.test-report-artifact-name }}
+        path: ${{ inputs.test-report-path }}
     - name: upload test coverage as artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ inputs.test-coverage-name }}
-        path: test.log
+        name: ${{ inputs.coverage-report-artifact-name }}
+        path: ${{ inputs.coverage-report-path }}
