--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=
-sonar.organization=
-sonar.host.url=
+sonar.organization=atomicloud
+# sonar.host.url=
 
 # --- optional properties ---
 
@@ -16,15 +16,13 @@ sonar.host.url=
 #sonar.sourceEncoding=UTF-8
 
 # --- test execution and coverage ---
-sonar.coverageReportPaths=
-sonar.testExecutionReportPaths=
+# sonar.coverageReportPaths=
+# sonar.testExecutionReportPaths=
 
 # ---- Go specific properties ---
 sonar.sources=.
-sonar.exclusions=**/*_test.go
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/*
 
-sonar.tests=.
-sonar.test.inclusions=**/*_test.go
-sonar.go.govet.reportPaths=
-sonar.go.golint.reportPaths=
-sonar.go.golangci-lint.reportPaths=
+sonar.go.golangci-lint.reportPaths=/github/workspace/lint.xml
+sonar.go.tests.reportPaths=/github/workspace/tests.out
+sonar.go.coverage.reportPaths=/github/workspace/coverage.out
