fix: missing required  property

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on: [push, pull_request]
 jobs:
   lint:
+    runs-on: ubuntu-18.04
     container:
       golang:1.16.3-alpine3.13
       # image:
@@ -20,6 +21,7 @@ jobs:
           artifact-name: lint-result
           #config-path:
   test:
+    runs-on: ubuntu-18.04
     container: golang:1.16.3-alpine3.13
     #   image:
     #   env:
@@ -37,6 +39,7 @@ jobs:
           coverage-report-artifact-name: coverage-report
           coverage-report-path: coverage.out # standardized path to match sonarqube properties
   sonarScan:
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       # - uses: docker://sonarsource/sonar-scanner-cli:latest
