--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,3 +76,16 @@ jobs:
           packages: ./app
           output: build
           artifact-name: build
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: build
+          path: build
+      # Alternative is to setup our container with awscli installed
+      - name: Upload build to S3
+        uses: docker://amazon/aws-cli:2.0.7
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        with:
+          args: s3 cp /github/home/build s3://bucket/key
