fix(ci): sonarcloud configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=
-sonar.organization=atomicloud
+sonar.projectKey=mokjunneng_cicd-framework
+sonar.organization=jnmok
 # sonar.host.url=
 
 # --- optional properties ---
