fix(ci): artifacts download path; build path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,6 +23,7 @@ sonar.organization=jnmok
 sonar.sources=.
 sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/*
 
-sonar.go.golangci-lint.reportPaths=/github/workspace/lint.xml
-sonar.go.tests.reportPaths=/github/workspace/tests.out
-sonar.go.coverage.reportPaths=/github/workspace/coverage.out
+# These report paths should match the artifacts' paths in the build workflow
+sonar.go.golangci-lint.reportPaths=/github/workspace/lint-result/lint.xml
+sonar.go.tests.reportPaths=/github/workspace/test-report/tests.out
+sonar.go.coverage.reportPaths=/github/workspace/coverage/coverage.out
