--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,16 +71,21 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - name: Download lint results
+        uses: actions/download-artifact@v1
+        with:
+          name: lint-result
+          path: lint-result
       - name: Download test results
         uses: actions/download-artifact@v1
         with:
           name: test-report
-          path: tests.out
+          path: test-report
       - name: Download code coverage results
         uses: actions/download-artifact@v1
         with:
           name: coverage-report
-          path: coverage.out
+          path: coverage
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@master
         env:
@@ -105,7 +110,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         with:
-          args: s3 cp /github/home/build-${{ github.sha }} s3://atomicloud-cicd-test/build-${{ github.sha }}
+          args: s3 cp /github/workspace/build-${{ github.sha }} s3://atomicloud-cicd-test/build-${{ github.sha }}
   goreleaser:
     runs-on: ubuntu-latest
     needs: [lint, test, sonarScan]
