--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,26 +91,26 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint, test, sonarScan]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          fetch-depth: 0
-      - uses: ./.github/actions/go-build
-        with:
-          packages: ./app
-          output: build-${{ github.sha }} # Need to match with next step's with.args
-      # Alternative is to setup our container with awscli installed
-      - name: Upload build to S3
-        uses: docker://amazon/aws-cli:2.0.7
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        with:
-          args: s3 cp /github/workspace/build-${{ github.sha }} s3://atomicloud-cicd-test/build-${{ github.sha }}
+  # build:
+  #   runs-on: ubuntu-latest
+  #   needs: [lint, test, sonarScan]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-go@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - uses: ./.github/actions/go-build
+  #       with:
+  #         packages: ./app
+  #         output: build-${{ github.sha }} # Need to match with next step's with.args
+  #     # Alternative is to setup our container with awscli installed
+  #     - name: Upload build to S3
+  #       uses: docker://amazon/aws-cli:2.0.7
+  #       env:
+  #         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       with:
+  #         args: s3 cp /github/workspace/build-${{ github.sha }} s3://atomicloud-cicd-test/build-${{ github.sha }}
   goreleaser:
     runs-on: ubuntu-latest
     needs: [lint, test, sonarScan]
@@ -131,3 +131,8 @@ jobs:
           workdir: ./app/cli/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload assets
+        uses: actions/upload-artifact@v2
+        with:
+          name: myapp
+          path: dist/*
