--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ builds:
   - # Working directory for Go build command(s)
     id: "cli"
     # Path to main.go file or main package
-    main: ./app/cli
+    main: ./app/cli/main
     env:
       - CGO_ENABLED=0
     # Defaults are darwin, linux
@@ -18,30 +18,30 @@ builds:
       - linux
       - windows
       - darwin
-      # - freebsd
+      - freebsd
     # Defaults are 386, amd64 and arm64
     goarch:
       - amd64
       - arm
       - arm64
-      # - 386
+      - 386
     # Default is 6 (goarm to build when goarch is arm)
     goarm:
       - 6
   - id: "app"
-    main: ./app
+    main: ./app/main
     env:
       - CGO_ENABLED=0
     goos:
       - linux
       - windows
       - darwin
-      # - freebsd
+      - freebsd
     goarch:
       - amd64
       - arm
       - arm64
-      # - 386
+      - 386
 archives:
   - replacements:
       darwin: Darwin
