fix(cd): main package path

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ builds:
   - # Working directory for Go build command(s)
     id: "cli"
     # Path to main.go file or main package
-    main: ./app/cli/main
+    main: ./app/cli/main.go
     env:
       - CGO_ENABLED=0
     # Defaults are darwin, linux
@@ -29,7 +29,7 @@ builds:
     goarm:
       - 6
   - id: "app"
-    main: ./app/main
+    main: ./app/main.go
     env:
       - CGO_ENABLED=0
     goos:
