--- a/app/.goreleaser.yml
+++ b/app/.goreleaser.yml
@@ -1,9 +1,9 @@
 # This is an example .goreleaser.yml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
-# before:
-#   hooks:
-#     # You may remove this if you don't use go modules.
-#     - go mod download
+before:
+  hooks:
+    # You may remove this if you don't use go modules.
+    - go mod download
 #     # you may remove this if you don't need go generate
 #     - go generate ./...
 builds:
@@ -31,7 +31,7 @@ builds:
       - 6
   - id: "app"
     binary: "app"
-    main: ./app/main.go
+    main: ./app
     env:
       - CGO_ENABLED=0
     goos:
