--- a/app/.goreleaser.yml
+++ b/app/.goreleaser.yml
@@ -19,11 +19,11 @@ builds:
       - linux
       - windows
       - darwin
-      - freebsd
+      # - freebsd
     # Defaults are 386, amd64 and arm64
     goarch:
       - amd64
-      - arm
+      # - arm
       - arm64
       - 386
     # Default is 6 (goarm to build when goarch is arm)
@@ -38,7 +38,7 @@ builds:
       - linux
       - windows
       - darwin
-      - freebsd
+      # - freebsd
     goarch:
       - amd64
       - arm
