--- a/.github/actions/goreleaser/action.yaml
+++ b/.github/actions/goreleaser/action.yaml
@@ -3,11 +3,8 @@ description: "Build and release for GO"
 inputs:
   args:
     required: true
-  workdir:
-    default: "."
-    required: false
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/gorelease.sh ${{ inputs.args }} ${{ inputs.workdir }}
+    - run: ${{ github.action_path }}/gorelease.sh ${{ inputs.args }}
       shell: bash
