--- a/.github/actions/goreleaser/action.yaml
+++ b/.github/actions/goreleaser/action.yaml
@@ -6,5 +6,5 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: ${{ github.action_path }}/gorelease.sh ${{ inputs.args }}
+    - run: ${{ github.action_path }}/gorelease.sh "${{ inputs.args }}"
       shell: bash
