--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,6 +134,8 @@ jobs:
           args: "release --rm-dist --config ./app/.goreleaser.yml"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           # GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
       # - name: Run GoReleaser
       #   uses: goreleaser/goreleaser-action@v2
@@ -145,3 +147,16 @@ jobs:
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     # GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+  # publishToUbuntuPpa:
+  #   runs-on: ubuntu-latest
+  #   needs: goreleaser
+  #   steps:
+  #     - name: Download signed builds
+  #       uses: actions/download-artifact@v1
+  #       with:
+  #         name:
+  #         path:
+  #     - name: Publish builds to Ubuntu PPA
+  #       uses: ./.github/actions/ubuntu-publish
+  #       with:
+  #         path:
